Fix: Changed bg to correct colour & centered title on mobile

--- a/src/app/(site)/css/teampageLayout.css
+++ b/src/app/(site)/css/teampageLayout.css
@@ -1,5 +1,4 @@
 .staffHeader{
-    display: flex;
     font-family: 'Literaturnaya-Bold';
     color: #493725;
     font-size: xxx-large;
@@ -8,7 +7,16 @@
 }
 
 .execList{
-font-family: 'NeueMachina-Regular';
+    font-family: 'NeueMachina-Regular';
 }
 
+@media only screen and (max-width: 768px) {
 
+    .staffHeader{
+        padding-top: 10%;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        justify-self: center;
+    }
+}
